Shuffle ws filters, fix possible issue with compiler reordering